--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="black">#000000</color>
+    <color name="orange">#a35f05</color>
+    <color name="darkgrey">#424242</color>
+    <color name="grey">#696969</color>
+    <color name="lightgrey">#888888</color>
+    <color name="white">#ffffff</color>
+    <color name="dirtywhite">#dedede</color>
 </resources>
