--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:theme="@style/AppTheme"
     tools:openDrawer="start">
 
     <include
@@ -52,7 +53,6 @@
                 android:layout_marginStart="16dp"
                 android:layout_toEndOf="@+id/logoutImageView"
                 android:text="@string/menu_logout"
-                android:textColor="@color/white"
                 android:textSize="16sp" />
         </RelativeLayout>
     </com.google.android.material.navigation.NavigationView>
