--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,9 +3,10 @@
     <style name="AppTheme" parent="Theme.AppCompat">
         <item name="colorPrimary">@color/black</item>
         <item name="colorPrimaryDark">@color/black</item>
-        <item name="colorAccent">@color/darkgrey</item>
+        <item name="colorAccent">@color/lightgrey</item>
         <item name="android:windowBackground">@color/black</item>
-        <item name="android:textColor">@color/darkgrey</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:fontFamily">@font/regular</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -23,6 +24,7 @@
         <item name="colorAccent">@color/lightgrey</item>
         <item name="android:windowBackground">@color/black</item>
         <item name="android:textColor">@color/white</item>
+        <item name="android:fontFamily">@font/regular</item>
     </style>
 
 </resources>
