--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -14,12 +14,21 @@
         android:text="@string/last_session" />
 
     <TextView
+        android:id="@+id/lastTeaSessionTranslatorLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@id/lastTeaSessionLabel"
+        android:layout_marginStart="4dp"
+        android:layout_toEndOf="@id/lastTeaSessionLabel"
+        android:text="@string/at" />
+
+    <TextView
         android:id="@+id/lastTeaSession"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@id/lastTeaSessionLabel"
         android:layout_marginStart="4dp"
-        android:layout_toEndOf="@+id/lastTeaSessionLabel" />
+        android:layout_toEndOf="@+id/lastTeaSessionTranslatorLabel" />
 
     <TextView
         android:id="@+id/sessionCountPrefixLabel"
