--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,6 +25,7 @@
         <item name="android:windowBackground">@color/black</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:fontFamily">@font/regular</item>
+        <item name="android:textColorPrimary">@color/white</item>
     </style>
 
 </resources>
