--- a/app/src/main/res/layout/viewholder_friend.xml
+++ b/app/src/main/res/layout/viewholder_friend.xml
@@ -2,8 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:maxHeight="64dp">
+    android:layout_height="64dp">
 
     <TextView
         android:id="@+id/friendName"
@@ -26,6 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/friendName"
         android:layout_toStartOf="@id/lastOnline"
+        android:layout_marginEnd="8dp"
         android:text="@string/last_online" />
 
     <TextView
