--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,9 @@
         <item name="android:windowBackground">@color/black</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:fontFamily">@font/regular</item>
+        <item name="android:textColorPrimary">@color/white</item>
+        <item name="colorControlNormal">@color/lightgrey</item>
+        <item name="android:textColorHint">@color/lightgrey</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -26,6 +29,8 @@
         <item name="android:textColor">@color/white</item>
         <item name="android:fontFamily">@font/regular</item>
         <item name="android:textColorPrimary">@color/white</item>
+        <item name="colorControlNormal">@color/lightgrey</item>
+        <item name="android:textColorHint">@color/lightgrey</item>
     </style>
 
 </resources>
