--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -31,6 +31,6 @@
     <FrameLayout
         android:id="@+id/content"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tabLayout"></FrameLayout>
+        android:layout_height="match_parent"
+        android:layout_marginTop="116dp" />
 </RelativeLayout>
